add the --enable-preview to IDE instructions